2013-01-03  Tommy Widenflycht  <tommyw@google.com>

        MediaStream API: Add a missing state to RTCPeerConnection
        https://bugs.webkit.org/show_bug.cgi?id=106017

        Reviewed by Adam Barth.

        Adding the missing ReadyStateHaveRemoteOffer which will show up in the spec soon.

        * chromium/public/WebRTCPeerConnectionHandlerClient.h:

2013-01-02  James Robinson  <jamesr@chromium.org>

        [chromium] Remove unused transitional #defines from Platform API
        https://bugs.webkit.org/show_bug.cgi?id=105971

        Reviewed by Adrienne Walker.

        These are leftovers from multi-sided patches that landed months ago.

        * chromium/public/WebContentLayerClient.h:
        (WebContentLayerClient):
        * chromium/public/WebLayer.h:
        * chromium/public/WebLayerTreeView.h:
        * chromium/public/WebThread.h:

2013-01-02  David Tseng  <dtseng@google.com>

        AX: Chromium needs platform localized strings for media controls.
        https://bugs.webkit.org/show_bug.cgi?id=105940

        Reviewed by Tony Chang.

        * chromium/public/WebLocalizedString.h:

2012-12-24  Alexei Filippov  <alph@chromium.org>

        Web Inspector: add async API for passing renderer process memory stats
        https://bugs.webkit.org/show_bug.cgi?id=105278

        Reviewed by Yury Semikhatsky.

        On some platforms (e.g. Linux) it may take some time to collect
        total process memory information as it involves an IPC out of a
        sandboxed renderer process. So add an async way to collect the statistics.

        * chromium/public/Platform.h:
        (Platform):
        (ProcessMemorySizesCallback):
        (WebKit::Platform::ProcessMemorySizesCallback::~ProcessMemorySizesCallback):
        (WebKit::Platform::requestProcessMemorySizes):

2012-12-18  Dana Jansens  <danakj@chromium.org>

        [chromium] Make WebLayerTreeView::loseCompositorContext non-pure virtual
        https://bugs.webkit.org/show_bug.cgi?id=105328
